<resources>
    <string name="app_name">Yts Browser</string>
    <string name="action_settings">Procurar</string>
    <string name="bt3d">3D (99999)</string>
    <string name="bt720">720p (99999)</string>
    <string name="bt1080">1080p (99999)</string>
    <string name="btimdb">Imdb (99.99)</string>
    <string name="txtyear">Year/Language</string>
    <string name="txttitle">Movie Title</string>
    <string name="txtGen">Genre</string>
    <string name="synopsis">"synopsis</string>
    <string name="searchText">Nova busca</string>
    <string name="searchHint">nome do filme</string>
    <string name="searchTitle">Procurar</string>
    <string name="action_next">Proxima Página</string>
    <string name="action_prior">Página Anterior</string>
    <string name="action_reset">Reset</string>
    <string name="APPLICATION_ID">ca-app-pub-1882929555373840~8922565807</string>
    <string name="admobbannerid">ca-app-pub-1882929555373840/1319052731</string>
    <string name="interstitial">ca-app-pub-1882929555373840/5042675321</string>
    <string name="start">Início</string>
    <string name="cfgtxt">Configurações</string>
    <string name="limitpag">Limite por Página:</string>
    <string name="qlty">Qualidade</string>
    <string name="sortby">Ordenar Por:</string>
    <string name="txlimit">Limite</string>
    <string name="rAll">Todas</string>
    <string name="r720p">720p</string>
    <string name="r1080">1080p</string>
    <string name="r3D">3D</string>
    <string name="pptxt">Política de Privacidade</string>
    <string name="semrede">Sem conexão de Internet</string>
    <string name="erroac1">Erro ao acessar</string>
    <string name="trylater">Tente mais tarde por favor!</string>
    <string name="develtxt">Desenvolvido por:\nRodrigo Ribeiro\ndigao.listas@gmail.com</string>
    <string-array name="arrayQlty">
        <item>Todas</item>
        <item>720p </item>
        <item>1080p</item>
        <item>3D</item>
    </string-array>
    <string-array name="arrayOrderYts">
        <item>title</item>
        <item>year</item>
        <item>rating</item>
        <item>peers</item>
        <item>seeds</item>
        <item>download_count</item>
        <item>like_count</item>
        <item>date_added</item>
    </string-array>
    <string-array name="arrayOrdem">
        <item>Título</item>
        <item>Ano</item>
        <item>Avaliação</item>
        <item>peers</item>
        <item>seeds</item>
        <item>Qtde downloads</item>
        <item>Qtde Likes</item>
        <item>Data de inclusão</item>
    </string-array>
    <string name="servidor">Servidor/Host</string>
    <string name="txTrailer">Trailer</string>
    <string-array name="servidores">
        <item>yts.am</item>
        <item>yts.ag</item>
        <item>yts.pm</item>
        <item>yify.is</item>
        <item>www4.yify.is</item>
    </string-array>

</resources>
