<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.digao.ytsbrowser.Activities.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:icon= "@android:drawable/ic_menu_search"
        android:hint="@string/searchHint"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView" />
    <item
        android:id="@+id/action_reset"
        android:orderInCategory="100"
        android:title="@string/start" />

    <item
        android:id="@+id/action_prior"
        android:orderInCategory="100"
        android:title="@string/action_prior"
        android:icon="@android:drawable/ic_media_previous"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/action_next"
        android:orderInCategory="100"
        android:title="@string/action_next"
        android:icon="@android:drawable/ic_media_next"
        app:showAsAction="always"
        />

</menu>
