<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.031"
        android:layout_marginLeft="8dp">

        <RelativeLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/movieImageID"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:src="@drawable/film000"
                android:layout_alignBottom="@id/btImdb"
                />


            <TextView
                android:id="@+id/movieTitleID"
                android:paddingLeft="5dp"
                android:layout_centerHorizontal="true"
                android:layout_toRightOf="@id/movieImageID"
                android:text="@string/txttitle"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/movieYear"
                android:padding="5dp"
                android:layout_toRightOf="@id/movieImageID"
                android:text="@string/txtyear"
                android:layout_below="@id/movieTitleID"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/movieGenre"
                android:padding="5dp"
                android:text="@string/txtGen"
                android:layout_below="@id/movieYear"
                android:layout_toRightOf="@id/movieImageID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btImdb"
                android:textSize="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/movieGenre"
                android:background="@drawable/btn_rouded"
                android:drawableTop="@drawable/imdb48"
                android:layout_toRightOf="@id/movieImageID"
                android:text="@string/btimdb" />
            <TextView
                android:id="@+id/movieSynopsis"
                android:padding="5dp"
                android:text="@string/synopsis"
                android:layout_below="@id/movieImageID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/bt720"
                android:textSize="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/movieSynopsis"
                android:layout_marginLeft="20dp"
                android:background="@drawable/btn_rouded"
                android:text="@string/bt720" />
            <Button
                android:id="@+id/bt1080"
                android:textSize="10dp"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/movieSynopsis"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/bt720"
                android:background="@drawable/btn_rouded"
                android:text="@string/bt1080" />

            <Button
                android:id="@+id/bt3D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/movieSynopsis"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="0dp"
                android:layout_toRightOf="@id/bt1080"
                android:background="@drawable/btn_rouded"
                android:text="@string/bt3d"
                android:textSize="10dp" />
        </RelativeLayout>


    </android.support.v7.widget.CardView>
</LinearLayout>